# rapidquilt

./: .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE.md  README.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: unified_parse.rs
src/: file_arena.rs  interned_file.rs  line.rs  line_interner.rs  main.rs  modified_file.rs  patch.rs  patch_unified.rs  util.rs
src/apply/: common.rs  diagnostics.rs  mod.rs  parallel.rs  sequential.rs
src/arena/: file_arena.rs  mod.rs
src/libpatch/: interned_file.rs  lib.rs  line.rs  line_interner.rs  modified_file.rs
src/libpatch/analysis/: mod.rs  multiapply.rs
src/libpatch/patch/: mod.rs
src/libpatch/tests/: mod.rs  testdata_parsing.rs  testdata_patching.rs
src/libpatch/util/: lines_with_endings.rs  mod.rs  search.rs
src/patch/: mod.rs
src/patch/unified/: parser.rs  writer.rs
src/rapidquilt/: cmd.rs  main.rs
src/rapidquilt/apply/: common.rs  diagnostics.rs  mod.rs  parallel.rs  sequential.rs
src/rapidquilt/arena/: file_arena.rs  mmap_arena.rs  mod.rs
src/rapidquilt/tests/: filename_distributor.rs  mod.rs  quilt_metadata.rs
src/tests/: mod.rs  testdata_parsing.rs  testdata_patching.rs
src/util/: edit_buffer.rs  edit_buffer2.rs  lines_with_endings.rs  mod.rs  search.rs
testdata/: README.txt
testdata/parsing/: README.txt  basic.patch  basic.patch-expected  diff_git_only.patch  diff_git_only.patch-expected  empty_line_in_context.patch  empty_line_in_context.patch-expected  garbage_between.patch  garbage_between.patch-expected  misordered_hunks.error  misordered_hunks.patch  misparsed.patch-expected  modification_date.patch  modification_date.patch-expected  no_newline.patch  no_newline.patch-expected  overlapping_hunks.error  overlapping_hunks.patch  permissions.patch  permissions.patch-expected  rename.patch  rename.patch-expected  reversed-header.patch  reversed-header.patch-expected  tab_in_context.patch  tab_in_context.patch-expected  various_hunks.patch  various_hunks.patch-expected
testdata/patching/: README.txt  basic.out  basic.patch  change_at_start.out  change_at_start.patch  change_at_start_that_will_fail.patch  context_matched.out  context_matched.patch  create.out  create.patch  create_out_files.sh  delete.patch  devnull.out  devnull.patch  file.in  file2.in  file3.in  file4.in  git_delete.patch  hunk_for_end_of_file.out  hunk_for_end_of_file.patch  hunk_for_start_of_file.out  hunk_for_start_of_file.patch  hunk_too_long.patch  hunks_misordered.patch  hunks_overlapping.out  hunks_overlapping.patch  hunks_overlapping_in_context.patch  hunks_overlapping_modified.out  hunks_overlapping_modified.patch  hunks_seemingly_misordered.out  hunks_seemingly_misordered.patch  hunks_seemingly_ordered.patch  misordered_alternative.patch  misordered_alternative_offset.patch  offset_out_of_bounds.out  offset_out_of_bounds.patch  offset_to_end.out  offset_to_end.patch  offset_to_start.out  (+34 more)
testdata/quilt/: create_out_files.sh
tmp/: sequence-patch.sh  sequence-patch.sh.patch
(+50 files in other folders)
