[package]
name = "rapidquilt"
description = "This is very specialized reimplementation of quilt & patch in one. It supports only the push command. The goal is to be very fast."
repository = "https://github.com/openSUSE/rapidquilt"
version = "0.6.6"
authors = ["Michal Srb <michalsrb@gmail.com>"]
license = "MIT"
edition = '2018'

[badges]
travis-ci = { repository = "rapidquilt/master" }

[profile.release]
lto = true

[lib]
name = "libpatch"
path = "src/libpatch/lib.rs"

[[bin]]
name = "rapidquilt"
path = "src/rapidquilt/main.rs"

[dependencies]
colored = "1.7.0"
derive_builder = "0.7.1"
thiserror = "2"
anyhow = "1.0"
getopts = "0.2.18"
itertools = "0.8.0"
jemallocator = "0.1.9"
libc = "0.2.50"
memchr = { version = "2.2.0", features = ["libc"] }
pathfinding = "1.1.12"
rayon = "1.0.3"
seahash = "3.0.6"
smallvec = "0.6.14"
strsim = "0.8.0"
tempfile = "3"

[features]
# Enable this feature to enable benchmarks using the (currently) unstable
# test::Bencher.
bencher = []
