[package]
name = "rapidquilt"
description = "This is very specialized reimplementation of quilt & patch in one. It supports only the push command. The goal is to be very fast."
repository = "https://github.com/openSUSE/rapidquilt"
version = "0.6.8"
authors = ["Michal Srb <michalsrb@gmail.com>"]
license = "MIT"
edition = '2018'

[badges]
travis-ci = { repository = "rapidquilt/master" }

[profile.release]
lto = true

[lib]
name = "libpatch"
path = "src/libpatch/lib.rs"

[[bin]]
name = "rapidquilt"
path = "src/rapidquilt/main.rs"

[dependencies]
colored = "3"
derive_builder = "0.20"
thiserror = "2"
anyhow = "1.0"
getopts = "0.2"
itertools = "0.14"
jemallocator = "0.5"
libc = "0.2"
memchr = { version = "2.7", features = ["libc"] }
pathfinding = "4"
rayon = "1"
seahash = "4"
tempfile = "3"

[features]
# Enable this feature to enable benchmarks using the (currently) unstable
# test::Bencher.
bencher = []
